--- a/Footer/index.html
+++ b/Footer/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>button image</title>
+    <title>footer</title>
 </head>
 <body>
-    <section>
-        <button><img src="./icon-cart.svg" alt="">button</button>    
-        <button><img src="./icon-cart.svg" alt="">button</button>
-    </section>
-    
+    <main></main>
+    <footer>footer</footer>
 </body>
 </html>
